# openinference-rs

./: .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  release-please-config.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  initial-publish.yml  pr.yml  release.yml  security.yml
openinference-instrumentation/: CHANGELOG.md  Cargo.toml
openinference-instrumentation/src/: config.rs  lib.rs  span_builder.rs
openinference-instrumentation/tests/: span_export_tests.rs
openinference-semantic-conventions/: CHANGELOG.md  Cargo.toml
openinference-semantic-conventions/src/: attributes.rs  gen_ai.rs  lib.rs  span_kind.rs
supply-chain/: audits.toml  config.toml
