[package]
name = "openinference-semantic-conventions"
description = "OpenInference semantic conventions for LLM observability in Rust"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
opentelemetry = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
